<resources>
    <string name="app_name">Android SQLite Example</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_tag">Tag</string>
    <string name="product_price">Price</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_tag">Enter tag</string>
    <string name="enter_price">Enter price</string>
    <string name="quickAdd">Quick Add</string>
    <string name="filterList">Filter List</string>
    <string name="groceryList">Grocery List</string>
</resources>
