<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    card_view:cardElevation="@dimen/_2sdp"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="4"
            android:text="@string/product_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:text="@string/product_quantity"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/product_price"
            card_view:layout_constraintTop_toBottomOf="@+id/product_tag" />


        <TextView
            android:id="@+id/product_tag"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_weight="4"
            android:text="@string/product_tag"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/product_name"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:text="@string/product_price"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/product_name" />

        <ImageView
            android:id="@+id/edit_product"
            android:layout_width="45dp"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pedit"
            card_view:layout_constraintEnd_toStartOf="@+id/delete_product"
            card_view:layout_constraintStart_toEndOf="@+id/product_quantity"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_product"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pdelete"
            card_view:layout_constraintEnd_toStartOf="@+id/checkBox"
            card_view:layout_constraintStart_toEndOf="@+id/edit_product"
            card_view:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="right|center"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/delete_product"
            card_view:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>